tdd_rust/yearly/ex
warning: unused import: `chrono::Utc`
 --> src/lib.rs:1:5
  |
1 | use chrono::Utc;
  |     ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: 1 warning emitted

   Compiling yearly v0.1.0 (/Users/tof/dev/yearly/tdd_rust/yearly)
error[E0425]: cannot find value `Utc` in this scope
 --> src/lib.rs:8:20
  |
8 |         assert_eq!(Utc.ymd(2020,02,29), Utc.ymd(2020,02,29));
  |                    ^^^ not found in this scope
  |
help: consider importing one of these items
  |
7 |     use chrono::Utc;
  |
7 |     use crate::Utc;
